# rtow1

./: .envrc  .gitignore  README.md  convert-img.sh  mktable.sh  requirements-dev.txt  run.sh  run_docker.sh  setup.cfg  test_all.sh
povray/: requirements.txt  where-next.py
rtow/: __init__.py  camera.py  chap11.py  chap13.py  chap2.py  chap4.py  chap6.py  chap9.py  common.py  dielectric.py  hittable.py  lambertian.py  metal.py  ray.py  sphere.py  template.py  vec3.py  version.py
