[metadata]
name = rtow
version = attr: rtow.version.VERSION
url = https://github.com/wtnb75/rtow
author = Watanabe Takashi
author_email = wtnb75@gmail.com
description = Ray Tracing in One Weekend with Python
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
  Development Status :: 3 - Alpha
  Intended Audience :: Developers
  License :: OSI Approved :: MIT License
  Topic :: Software Development :: Libraries :: Python Modules
  Programming Language :: Python :: 3

[options]
zip_safe = False
packages = find:

[options.entry_points]
console_scripts =
  rtow-chap2=rtow.chap2:cli
  rtow-chap4=rtow.chap4:cli
  rtow-chap6=rtow.chap6:cli
  rtow-chap9=rtow.chap9:cli
  rtow-chap11=rtow.chap11:cli
  rtow-chap13=rtow.chap13:cli
